force-app/main/default/objects/LimiteInversionPb__c/LimiteInversionPb__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LímiteInversiónPb</label>
</CustomObject>