force-app/main/default/objects/LimiteInversionPb__c/fields/LimiteIR__c.field-meta.xml
<CustomField>
    <fullName>LimiteIR__c</fullName>
    <label>LimiteIR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>