force-app/main/default/objects/LimiteInversionPb__c/fields/LimitePB__c.field-meta.xml
<CustomField>
    <fullName>LimitePB__c</fullName>
    <label>LimitePB</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>