force-app/main/default/objects/LimiteInversionPb__c/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje</label>
    <length>100</length>
    <type>Text</type>
</CustomField>