force-app/main/default/objects/LimiteInversionPb__c/listViews/Ver.listView-meta.xml
<ListView>
    <fullName>Ver</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Email__c</columns>
    <columns>LimiteIR__c</columns>
    <columns>LimitePB__c</columns>
    <columns>Mensaje__c</columns>
    <columns>Usuario__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver</label>
    <language>es</language>
</ListView>